# RISCV-simulator

./: .gitignore  CMakeLists.txt  README.md
include/: debug.h  elf_defs.h  riscv_defs.h  type_defs.h
src/: Cache.cpp  Cache.h  ELFParser.cpp  ELFParser.h  Simulate.cpp  Simulate.h  Simulator.cpp  Simulator.h  cachemain.cpp  main.cpp
test/: 1+2  1+2.c  1+2.s  add  add.s  double-float  double-float.s  mul-div  mul-div.s  n!  n!.s  qsort  qsort.s  simple-fuction  simple-fuction.s
